MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/Report_Item__c.object-meta.xml
<CustomObject>
    <label>Report Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>