MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Average_Speed_of_Answer__c.field-meta.xml
<CustomField>
    <fullName>Average_Speed_of_Answer__c</fullName>
    <label>Average Speed of Answer</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>