MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Calls_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>Calls_In_Queue__c</fullName>
    <label>Calls In Queue</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>