MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Chats_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>Chats_In_Queue__c</fullName>
    <label>Chats In Queue</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>