MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Email_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Email_Interactions__c</fullName>
    <label>Email Interactions</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>