MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Outbound_Voice_Calls__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Voice_Calls__c</fullName>
    <label>Outbound Voice Calls</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>