MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level %</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>