MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/fields/Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls__c</fullName>
    <label>Total Calls</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>