MODON MRE BPDEV/force-app/main/default/objects/Report_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interval_Start__c</columns>
    <columns>Total_Calls__c</columns>
    <columns>Average_Speed_of_Answer__c</columns>
    <columns>Service_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>